--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,11 @@ edition = "2018"
 
 [dependencies]
 serenity = { version = "0.9.0-rc.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache"] }
-
 tokio = { version = "0.2", features = ["macros"] }
+bson = "0.14"
+
+[dependencies.mongodb]
+version = "1.1.1"
+default-features = false
+features = ["async-std-runtime"]
+
